# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import healthRouter from "./health.js";
+import eventsRouter from "./events.js";
+import fightsRouter from "./fights.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(eventsRouter);
+router.use(fightsRouter);
 
 export default router;
